# bib-dedup

./: .gitignore  Makefile  README.md  pyproject.toml
src/bib_dedup/: __init__.py  bibtex_io.py  cli.py  dedup.py  normalize.py  report.py
tests/: test_cli_smoke.py  test_dedup.py
